# opendut

./: Cargo.toml
.agents/skills/testing-opendut/: SKILL.md
.ci/cargo-ci/src/tasks/: build.rs  distribution.rs
.ci/deploy/localenv/: .env.development  docker-compose.override.mtls.yml  docker-compose.override.noative  docker-compose.yml
.ci/deploy/localenv/ansible/: playbook_backend.yaml
.ci/deploy/opendut-vm/: Vagrantfile
.ci/deploy/testenv/edgar/: docker-compose-test.yml  docker-compose.yml  persist-edgar-logs.sh
.github/workflows/: homepage.yaml
doc/src/: changelog.md
doc/src/architecture/viper/: index.md
doc/src/user-manual/edgar/: setup.md
opendut-carl/src/resource/: manager.rs  subscription.rs
opendut-carl/src/resource/api/: id.rs  (+1 more)
opendut-edgar/: Cargo.toml
opendut-edgar/netbird-client-api/src/: client.rs
opendut-edgar/plugin-api/test-plugins/: Cargo.toml  plugins.txt
opendut-edgar/restbus-simulation/: Cargo.toml  arxml_parser.rs  arxml_utils.rs  lib.rs  simulation.rs
opendut-edgar/restbus-simulation/src/: arxml_parser.rs  lib.rs  restbus_simulation.rs
opendut-edgar/src/common/: settings.rs
opendut-edgar/src/setup/: start.rs  write_configuration.rs
opendut-lea/src/: routing.rs
opendut-model/src/proto/: viper.rs
opendut-model/src/viper/: deployment.rs  mod.rs  run.rs  test.rs
opendut-telemetry/src/: opentelemetry_types.rs
opendut-util/opendut-util-core/src/: pem.rs  reqwest_client.rs
opendut-util/src/: settings.rs
opendut-viper/viper-rt/tests/: cluster_network_verification.py
tests/hil/: test_ecu_connectivity.py
(+36 files in other folders)
